# sat-x

./: .cz.toml  .gitignore  .windsurfrules  99-sat-x-fan-control.rules  CHANGELOG.md  README.md  deploy_service.sh  fan_permissions.sh  go.mod  main.go  pyproject.toml  sat-x.service  setup.sh
.github/workflows/: pr.yml  release.yml
config/: settings.yaml
firmware/: cmdline.txt  config.txt  dietpi.txt
src/sat_x/: config.py  database.py  logging_config.py  main.py  models.py  repositories.py
src/sat_x/api/: routes.py  schemas.py
src/sat_x/services/: fan_control_service.py  metrics_service.py
src/sat_x/tasks/: fan_control_task.py  metrics_collector.py
tests/: conftest.py
tests/api/: test_metrics_api.py
